[gd_scene load_steps=3 format=3 uid="uid://r4v5thvist6p"]

[ext_resource type="Script" path="res://Davaleba.gd" id="1_opjcq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rv6ny"]
bg_color = Color(0.894118, 0.835294, 0.698039, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.333333, 0.258824, 0.227451, 1)

[node name="CanvasLayer_Davaleba" type="CanvasLayer"]
script = ExtResource("1_opjcq")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 46.0
offset_top = 5.0
offset_right = -55.0
offset_bottom = 164.0
grow_horizontal = 2
size_flags_horizontal = 6
theme_override_constants/margin_left = 17
theme_override_constants/margin_top = 17
theme_override_constants/margin_right = 17
theme_override_constants/margin_bottom = 17

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rv6ny")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="MarginContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "sate"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -503.0
offset_top = -159.0
offset_right = 502.0
offset_bottom = -106.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 300

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "wina personaJi"

[node name="Button3" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Sesabameba"

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Semdegi persoaJi"

[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
